# Assignments-F2025

CS3650/: mix.tex
CS4230/: main.py  pyproject.toml
CS4230/HW01/: min.aux  min.fdb_latexmk  min.fls  min.tex
CS4230/HW01/code/: main.py  script.py
CS4230/HW02/: min.tex
CS4230/HW02/code/: CS2430_Lecture_6 (1).ipynb  pyproject.toml
CS4230/IN_CLASS/: CS_4230_Lecture_8.ipynb
CS4230/IN_CLASS/week-6/: CS_4230_Lecture_9.ipynb
CS4230/IN_CLASS/week-7/: CS_4230_Lecture_10.ipynb
CS4230/IN_CLASS/week_5_intro_to_nx/: CS2430_Lecture_6.ipynb  CS2430_Lecture_6.md  CS_4230_Lecture_7.ipynb  main.py  pyproject.toml
CS4230/hw02/: SamLy_HW02.ipynb
CS4230/hw03/: SamLy_hw3.ipynb
CS4230/hw04/: CS_4230_Lecture_10 (1).ipynb  hw04.ipynb  political_social_media_preprocessing_demo (1).ipynb
CS4230/old/HW01/: min.tex
CS4230/old/HW01/code/: pyproject.toml
CS4230/old/HW02/code/: cs4230_lecture_5.py  main.py
HW01/: minimal_template.fdb_latexmk  minimal_template.fls  minimal_template.tex
MAT3100W/HW00/: minimal_template.fdb_latexmk  minimal_template.fls  minimal_template.tex
MAT3100W/HW01/: minimal_template.fdb_latexmk  minimal_template.fls  minimal_template.tex
MAT3100W/HW02/: min.tex
MAT3100W/HW03/: min.tex
MAT3100W/HW04/: min.tex
MAT3100W/HW05/: min.tex
MAT3100W/HW06/: min.tex
MAT3100W/HW07/: min.tex
MAT3100W/HW08/: min.tex
MAT3100W/HW09/: min.tex
MAT3100W/HW10/: min.tex
MAT3100W/Portfollio/: CLAUDE.md  portfolio.aux  portfolio.bbl  portfolio.blg  (+7 more)
WEEK 2/: evenodd.fdb_latexmk  evenodd.fls  evenodd.tex
templates/: min.fdb_latexmk  min.fls  min.tex
(+10 files in other folders)
