[project]
name = "cs4230"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "networkx>=3.5",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
